fixed spacing bug

--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@
 #inner-horizontal-scroll-wrapper {
 	display: flex;
 	flex-direction: row;
-	width: 400vw;
+	width: 320vw;
 	transform: rotate(90deg) translateY(-100vh);
 	transform-origin: top left;
 }
